--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MYSQL_HOST = 
-MYSLQ_PASSWORD = password
-MYSQL_PORT = 3306
-MYSQL_USER = root
-MYSQL_DB = 
+MYSLQ_PASSWORD=password
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_DB=carroscaros
