--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MYSQL_HOST = 
+MYSQL_HOST=http://ec2-18-237-241-96.us-west-2.compute.amazonaws.com/
 MYSLQ_PASSWORD=password
 MYSQL_PORT=3306
 MYSQL_USER=root
