--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,17 @@
 services:
+  haproxy:
+    image: haproxy:latest
+    container_name: haproxy
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
+    depends_on:
+      - carros
+      - comprasyvistas
+      - usuarios
+
   carros:
     build: ./src/carros
       #networks:
