--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -10,3 +10,6 @@ scrape_configs:
   - job_name: "cyv_service"
     static_configs:
       - targets: ["comprasyvistas:3002"]
+  - job_name: "haproxy_fontend"
+    static_configs:
+      - targets: ["haproxy:8404"]
