--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,6 +1,86 @@
+# -------------------------------------------------------------------
+# GLOBAL SETTINGS
+# -------------------------------------------------------------------
+global
+    log stdout format raw local0
+    daemon
+    maxconn 2000
+    stats socket /tmp/haproxy.sock mode 660 level admin
+    stats timeout 30s
 
+# -------------------------------------------------------------------
+# DEFAULTS
+# -------------------------------------------------------------------
+defaults
+    log     global
+    mode    http
+    option  httplog
+    option  dontlognull
+    timeout connect 5s
+    timeout client  50s
+    timeout server  50s
+    retries 3
+    option  redispatch
 
+# -------------------------------------------------------------------
+# DNS RESOLVERS FOR DYNAMIC BACKEND IPS
+# -------------------------------------------------------------------
+resolvers docker
+    nameserver dns1 127.0.0.11:53
+    resolve_retries       3
+    timeout resolve       1s
+    timeout retry         1s
+    hold valid            10s
 
+# -------------------------------------------------------------------
+# FRONTEND: HTTP TRAFFIC
+# -------------------------------------------------------------------
+frontend http_front
+    bind *:80
+    acl path_usuarios       path_beg /usuarios
+    acl path_carros         path_beg /carros
+    acl path_comprasyvistas path_beg /comprasyvistas
+
+    use_backend bk_usuarios        if path_usuarios
+    use_backend bk_carros          if path_carros
+    use_backend bk_comprasyvistas  if path_comprasyvistas
+    default_backend react_app    # fallback
+
+backend react_app
+    server react_server web:8080 check
+
+# -------------------------------------------------------------------
+# BACKENDS POR PATH
+# -------------------------------------------------------------------
+backend bk_usuarios
+    balance roundrobin
+    # elimino el prefijo /usuarios para el backend
+    #http-request set-path %[path,regsub(^/usuarios/,/)]
+    server srv_usr1 usuarios:3001 check resolvers docker resolve-prefer ipv4
+
+backend bk_carros
+    balance roundrobin
+    #http-request set-path %[path,regsub(^/carros/,/)]
+    server srv_car1 carros:3003 check resolvers docker resolve-prefer ipv4
+
+backend bk_comprasyvistas
+    balance roundrobin
+    #http-request set-path %[path,regsub(^/comprasyvistas/,/)]
+    server srv_compv1 comprasyvistas:3002 check resolvers docker resolve-prefer ipv4
+
+# -------------------------------------------------------------------
+# FRONTEND: METRICS (Prometheus)
+# -------------------------------------------------------------------
 frontend stats
-	bind *8404
-	http-request use-service prometheus-exporter if { path /metrics }
+    bind *:8404
+    http-request use-service prometheus-exporter if { path /metrics }
+
+# -------------------------------------------------------------------
+# OPTIONAL: PANEL DE ESTADÍSTICAS EN BROWSER
+# -------------------------------------------------------------------
+listen stats_ui
+    bind *:9000
+    stats enable
+    stats uri /stats
+    stats refresh 10s
+    stats auth admin:admin
